--- a/locale/ca_ES/manager.po
+++ b/locale/ca_ES/manager.po
@@ -2,14 +2,17 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"Last-Translator: \n"
-"Language-Team: \n"
+"POT-Creation-Date: 2019-11-28T15:10:03-08:00\n"
+"PO-Revision-Date: 2020-04-23 16:38+0000\n"
+"Last-Translator: Jordi LC <jordi.lacruz@uab.cat>\n"
+"Language-Team: Catalan <http://translate.pkp.sfu.ca/projects/omp/manager/ca/>"
+"\n"
+"Language: ca_ES\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"POT-Creation-Date: 2019-11-28T15:10:03-08:00\n"
-"PO-Revision-Date: 2019-11-28T15:10:03-08:00\n"
-"Language: \n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Weblate 3.9.1\n"
 
 msgid "manager.language.confirmDefaultSettingsOverwrite"
 msgstr "Aquesta acció reemplaça els paràmetres de la publicació determinats per a aquesta configuració regional"
@@ -878,3 +881,195 @@ msgstr ""
 
 msgid "manager.publication.library"
 msgstr "Biblioteca de la publicació"
+
+msgid "manager.people.allEnrolledUsers"
+msgstr "Usuaris/àries inscrits en aquesta publicació"
+
+msgid "manager.tools.statistics"
+msgstr ""
+"Eines per generar informes relacionats amb estadístiques d'ús (visualització "
+"de la pàgina d'índex del catàleg, visualitzacions de pàgina de resum de la "
+"monografia, descàrregues d'arxius de monografies)"
+
+msgid "manager.settings.publisherCodeType.invalid"
+msgstr "Aquest no és un tipus de codi d'editorial vàlid."
+
+msgid "manager.settings.publisherCodeType"
+msgstr "Tipus de codi de l'editorial"
+
+msgid "manager.settings.publisher.identity"
+msgstr "Identitat de l'editorial"
+
+msgid "manager.payment.success"
+msgstr "La configuració dels pagaments s'ha actualitzat."
+
+msgid "manager.payment.options.enablePayments"
+msgstr ""
+"S'ha activat el pagament per a aquesta publicació. Els usuaris/àries hauran "
+"d'iniciar sessió per fer els pagaments."
+
+msgid "manager.payment.generalOptions"
+msgstr "Opcions generals"
+
+msgid "manager.setup.displayNewReleases.label"
+msgstr "Novetats"
+
+msgid "manager.setup.displayInSpotlight.label"
+msgstr "Focus"
+
+msgid "manager.setup.displayFeaturedBooks.label"
+msgstr "Llibres destacats"
+
+msgid "manager.setup.displayOnHomepage"
+msgstr "Contingut de la pàgina d'inici"
+
+msgid "manager.setup.coverThumbnailsMaxWidthHeight.description"
+msgstr ""
+"Les imatges es reduiran quan siguin més grans d'aquesta mida, però mai "
+"s'ampliaran ni s'estiraran per ajustar-se a aquestes dimensions."
+
+msgid "manager.setup.coverThumbnailsMaxWidth"
+msgstr "Amplada màxima de la imatge de coberta"
+
+msgid "manager.setup.coverThumbnailsMaxHeight"
+msgstr "Alçària màxima de la imatge de coberta"
+
+msgid "manager.setup.contextSummary"
+msgstr "Resum de la publicació"
+
+msgid "manager.setup.contextAbout.description"
+msgstr ""
+"Incloeu tota la informació sobre la vostra publicació que considereu "
+"d'interès per a lectors/es, autors/es o revisors/es. Això podria incloure la "
+"política d'accés obert, el focus i l'abast de la publicació, la divulgació "
+"del patrocini i la història de la revista."
+
+msgid "manager.setup.contextAbout"
+msgstr "Quant a la publicació"
+
+msgid "manager.setup.announcements.success"
+msgstr "La configuració dels avisos s'ha actualitzat."
+
+msgid "user.authorization.pluginLevel"
+msgstr "No teniu suficients privilegis per gestionar aquest mòdul."
+
+msgid "stats.publications.abstracts"
+msgstr "Entrades del catàleg"
+
+msgid "stats.publications.countOfTotal"
+msgstr "{$count} de {$total} monografies"
+
+msgid "stats.publications.totalGalleyViews.timelineInterval"
+msgstr "Visualitzacions totals d'arxiu per data"
+
+msgid "stats.publications.totalAbstractViews.timelineInterval"
+msgstr "Visualitzacions totals del catàleg per data"
+
+msgid "stats.publications.none"
+msgstr ""
+"No s'ha trobat cap monografia amb estadístiques d'ús que coincideixin amb "
+"aquests paràmetres."
+
+msgid "stats.publications.details"
+msgstr "Detalls de la monografia"
+
+msgid "stats.publicationStats"
+msgstr "Estadístiques de la monografia"
+
+msgid "grid.series.urlWillBe"
+msgstr "L'URL de la sèrie serà: {$sampleUrl}"
+
+msgid "manager.navigationMenus.form.navigationMenuItem.category"
+msgstr "Seleccionar categoria"
+
+msgid "manager.navigationMenus.form.navigationMenuItem.series"
+msgstr "Seleccionar sèrie"
+
+msgid "grid.series.pathExists"
+msgstr "La ruta de la sèrie ja existeix. Introduïu una ruta única."
+
+msgid "grid.series.pathAlphaNumeric"
+msgstr "La ruta de les sèries només admet lletres i números."
+
+msgid "manager.setup.notifications.copyPrimaryContact"
+msgstr ""
+"Enviar una còpia al contacte principal, identificat en la configuració de la "
+"publicació."
+
+msgid "grid.genres.title"
+msgstr "Components de la monografia"
+
+msgid "grid.genres.title.short"
+msgstr "Components"
+
+msgid "manager.setup.resetPermissions.success"
+msgstr "Els permisos de monografia s'han reiniciat correctament."
+
+msgid "manager.setup.resetPermissions.confirm"
+msgstr ""
+"Segur que voleu reiniciar les dades de permisos ja associades a les "
+"monografies?"
+
+msgid "manager.setup.resetPermissions"
+msgstr "Reiniciar els permisos de monografia"
+
+msgid "manager.setup.siteAccess.viewContent"
+msgstr "Veure el contingut de la monografia"
+
+msgid "manager.setup.siteAccess.view"
+msgstr "Accés al lloc"
+
+msgid "manager.setup.searchEngineIndexing.success"
+msgstr "La configuració d'indexació del motor de cerca s'ha actualitzat."
+
+msgid "manager.setup.searchDescription.description"
+msgstr ""
+"Proporcioneu una descripció breu (50-300 caràcters) de la publicació que els "
+"motors de cerca puguin mostrar quan llistin la publicació en els resultats "
+"de cerca."
+
+msgid "manager.setup.reviewOptions.reviewerAccessKeysEnabled.label"
+msgstr ""
+"Incloure un enllaç segur en el correu electrònic d'invitació als revisors/"
+"ores."
+
+msgid "manager.setup.reviewOptions.reviewerAccessKeysEnabled"
+msgstr "Accés del revisor/a amb un sol clic"
+
+msgid "manager.setup.reviewOptions.restrictReviewerFileAccess"
+msgstr "Restringir l'accés a l'arxiu"
+
+msgid "manager.setup.aboutPress"
+msgstr "Quant a la publicació"
+
+msgid "manager.setup.privacyStatement.success"
+msgstr "La declaració de privacitat s'ha actualitzat."
+
+msgid "manager.setup.numPageLinks.description"
+msgstr ""
+"Limitar el nombre d'enllaços que es mostren en les pàgines successives en "
+"una llista."
+
+msgid "manager.setup.masthead.success"
+msgstr "Els detalls de la capçalera d'aquesta publicació s'han actualitzat."
+
+msgid "manager.setup.lists.success"
+msgstr "La configuració de llista d'aquesta revista s'ha actualitzat."
+
+msgid "manager.setup.keyInfo"
+msgstr "Informació clau"
+
+msgid "manager.setup.itemsPerPage"
+msgstr "Elements per pàgina"
+
+msgid "manager.setup.information.success"
+msgstr "La informació d'aquesta publicació s'ha actualitzat."
+
+msgid "manager.setup.information"
+msgstr "Informació"
+
+msgid "manager.setup.identity"
+msgstr "Identitat de la publicació"
+
+msgid "manager.setup.numAnnouncementsHomepage"
+msgstr "Mostrar a la pàgina d'inici"
