--- a/locale/es_ES/manager.po
+++ b/locale/es_ES/manager.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-09-30T06:23:44-07:00\n"
-"PO-Revision-Date: 2020-03-05 10:36+0000\n"
+"PO-Revision-Date: 2020-04-23 16:38+0000\n"
 "Last-Translator: Jordi LC <jordi.lacruz@uab.cat>\n"
 "Language-Team: Spanish <http://translate.pkp.sfu.ca/projects/omp/manager/es/>"
 "\n"
@@ -286,7 +286,7 @@ msgid "manager.users.selectRole"
 msgstr "Seleccionar función"
 
 msgid "manager.people.allEnrolledUsers"
-msgstr "Usuarios inscritos en esta editorial"
+msgstr "Usuarios/as inscritos en esta publicación"
 
 msgid "manager.people.allPresses"
 msgstr "Todas las editoriales"
@@ -427,10 +427,10 @@ msgid "manager.setup.contributors.description"
 msgstr "Las agencias u organizaciones adicionales que proporcionan ayuda financiera y en especie a la editorial, aparecerán en Acerca de la editorial y podrán ir acompañadas de una nota de reconocimiento."
 
 msgid "manager.setup.copyediting"
-msgstr "Correctores de estilo"
+msgstr "Correctores/as de originales"
 
 msgid "manager.setup.copyeditInstructions"
-msgstr "Instrucciones de corrección de estilo"
+msgstr "Instrucciones para la corrección de originales"
 
 msgid "manager.setup.copyeditInstructionsDescription"
 msgstr "Las instrucciones de corrección estarán disponibles para correctores/as, autores/as y editores/as de sección en la fase Edición del envío. A continuación se detallan unas instrucciones por defecto para HTML, que el jefe/a editorial puede modificar o reemplazar en cualquier momento (en HTML o en texto plano)."
@@ -1234,7 +1234,7 @@ msgid "manager.settings.publisherCodeType"
 msgstr "Tipo de código de la editorial"
 
 msgid "user.authorization.pluginLevel"
-msgstr "No tiene suficientes privilegios para gestionar este conector."
+msgstr "No tiene suficientes privilegios para gestionar este módulo."
 
 msgid "manager.setup.displayOnHomepage"
 msgstr "Contenido de la página de inicio"
@@ -1243,7 +1243,9 @@ msgid "manager.setup.resetPermissions"
 msgstr "Reinicia los permisos de monografía"
 
 msgid "manager.setup.resetPermissions.confirm"
-msgstr "¿Está seguro de que desea reiniciar los datos de permisos ya fijados para las monografías?"
+msgstr ""
+"¿Seguro que desea reiniciar los datos de permisos ya asociados a las "
+"monografías?"
 
 msgid "manager.setup.resetPermissions.description"
 msgstr ""
@@ -1264,10 +1266,15 @@ msgid "manager.payment.generalOptions"
 msgstr "Opciones generales"
 
 msgid "manager.payment.options.enablePayments"
-msgstr "Se han habilitado los pagos para esta editorial. Tenga en cuenta que los usuarios deben estar autenticados para hacer los pagos."
+msgstr ""
+"Se han habilitado los pagos para esta publicación. Tenga en cuenta que los "
+"usuarios/as deberán iniciar la sesión para hacer los pagos."
 
 msgid "manager.tools.statistics"
-msgstr "Herramientas para generar informes relacionados con estadísticas de uso (visualización de páginas de índice de catálogo, páginas de resumen de monografías, descargas de archivos de monografías)"
+msgstr ""
+"Herramientas para generar informes relacionados con estadísticas de uso ("
+"visualización de páginas de índice de catálogo, visualización de páginas de "
+"resumen de monografías, descargas de archivos de monografías)"
 
 msgid "manager.setup.aboutPress"
 msgstr "Sobre la editorial"
@@ -1279,7 +1286,7 @@ msgid "grid.series.pathAlphaNumeric"
 msgstr "La ruta de las series solo admite letras y números."
 
 msgid "grid.series.pathExists"
-msgstr "La ruta de la serie ya existe. Por favor ingrese una ruta única."
+msgstr "La ruta de la serie ya existe. Introduzca una ruta única."
 
 msgid "grid.series.urlWillBe"
 msgstr "La URL de las series, será: {$sampleUrl}"
@@ -1311,7 +1318,7 @@ msgid "manager.navigationMenus.form.navigationMenuItemCategoryMessage"
 msgstr "Seleccione la categoría a la que desea vincular este elemento del menú."
 
 msgid "manager.navigationMenus.form.navigationMenuItem.category"
-msgstr "Seleccione Categoría"
+msgstr "Seleccionar categoría"
 
 msgid "manager.navigationMenus.form.navigationMenuItemSeriesMessage"
 msgstr "Seleccione la serie a la que desea vincular este elemento del menú."
@@ -1329,13 +1336,13 @@ msgid "manager.setup.siteAccess.view"
 msgstr "Acceso al sitio"
 
 msgid "manager.setup.searchEngineIndexing.success"
-msgstr "La configuración del índice del motor de búsqueda se ha actualizado."
+msgstr "Los ajustes de indexación del motor de búsqueda se han actualizado."
 
 msgid "manager.setup.searchDescription.description"
 msgstr ""
-"Suministrar una breve descripción (50-300 caracteres) del medio en tanto "
-"para que los motores de búsqueda pueden mostrar al mismo en los resultados "
-"de búsqueda."
+"Proporcione una breve descripción (50-300 caracteres) de la publicación que "
+"los motores de búsqueda puedan mostrar cuando listen la publicación en los "
+"resultados de búsqueda."
 
 msgid "manager.setup.reviewOptions.reviewerAccessKeysEnabled.label"
 msgstr ""
@@ -1349,7 +1356,7 @@ msgstr ""
 "sesión. El acceso a otras páginas requiere que inicien sesión."
 
 msgid "manager.setup.reviewOptions.reviewerAccessKeysEnabled"
-msgstr "Acceso del revisor con un clic"
+msgstr "Acceso del revisor/a con un clic"
 
 msgid "manager.setup.reviewOptions.restrictReviewerFileAccess"
 msgstr "Restringir el acceso al archivo"
@@ -1359,7 +1366,8 @@ msgstr "La declaración de privacidad ha sido actualizada."
 
 msgid "manager.setup.numPageLinks.description"
 msgstr ""
-"Limite el número de enlaces a mostrar en una lista en las páginas sucesivas."
+"Limitar el número de enlaces que se muestran en las páginas sucesivas en una "
+"lista."
 
 msgid "manager.setup.masthead.success"
 msgstr "Los detalles de la cabecera de este medio se han actualizado."
@@ -1440,26 +1448,26 @@ msgid "manager.setup.coverThumbnailsMaxHeight"
 msgstr "Altura máxima de la imagen de portada"
 
 msgid "manager.setup.contextSummary"
-msgstr "Resumen de la editorial"
+msgstr "Resumen de la publicación"
 
 msgid "manager.setup.contextAbout.description"
 msgstr ""
-"Incluya cualquier información sobre su editorial que pueda ser de interés "
-"para lectores, autores o revisores. Esto podría incluir su política de "
-"acceso abierto, el enfoque y el alcance del mismo, la divulgación del "
+"Incluya toda la información sobre su publicación que pueda ser de interés "
+"para lectores/as, autores/as o revisores/as. Esto podría incluir su política "
+"de acceso abierto, el enfoque y el alcance del mismo, la divulgación del "
 "patrocinio y la historia de la publicación."
 
 msgid "manager.setup.contextAbout"
-msgstr "Acerca del medio"
+msgstr "Acerca de la publicación"
 
 msgid "manager.setup.announcements.success"
-msgstr "La configuración de anuncios ha sido actualizada."
+msgstr "La configuración de los avisos ha sido actualizada."
 
 msgid "manager.settings.publisherCodeType.invalid"
-msgstr "Este no es un Tipo de Código de Editor válido."
+msgstr "Este no es un tipo de código de editorial válido."
 
 msgid "manager.settings.publisher.identity"
-msgstr "Identidad del editor"
+msgstr "Identidad de la editorial"
 
 msgid "manager.payment.success"
 msgstr "La configuración de pago ha sido actualizada."
