--- a/locale/en_US/locale.po
+++ b/locale/en_US/locale.po
@@ -542,6 +542,9 @@ msgstr "Add Attachment to Review"
 msgid "grid.reviewAttachments.availableFiles"
 msgstr "Available Files"
 
+msgid "submissionGroup.assignedSubEditors"
+msgstr "Assigned editors"
+
 msgid "series.series"
 msgstr "Series"
 
