--- a/locale/ca_ES/locale.po
+++ b/locale/ca_ES/locale.po
@@ -2,14 +2,17 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"Last-Translator: \n"
-"Language-Team: \n"
+"POT-Creation-Date: 2019-11-28T15:10:03-08:00\n"
+"PO-Revision-Date: 2020-05-23 14:39+0000\n"
+"Last-Translator: Jordi LC <jordi.lacruz@uab.cat>\n"
+"Language-Team: Catalan <http://translate.pkp.sfu.ca/projects/omp/locale/"
+"ca_ES/>\n"
+"Language: ca_ES\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"POT-Creation-Date: 2019-11-28T15:10:03-08:00\n"
-"PO-Revision-Date: 2019-11-28T15:10:03-08:00\n"
-"Language: \n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Weblate 3.9.1\n"
 
 msgid "monograph.audience"
 msgstr "Audiència"
@@ -54,73 +57,73 @@ msgid "monograph.accessLogoOpen.altText"
 msgstr "Accés obert"
 
 msgid "monograph.publicationFormat.imprint"
-msgstr "Imprint (Brand Name)"
+msgstr "Imprimir (nom de la marca)"
 
 msgid "monograph.publicationFormat.pageCounts"
-msgstr "Page Counts"
+msgstr "Recompte de pàgines"
 
 msgid "monograph.publicationFormat.frontMatterCount"
-msgstr "Front Matter"
+msgstr "Pròleg"
 
 msgid "monograph.publicationFormat.backMatterCount"
-msgstr "Back Matter"
+msgstr "Epíleg"
 
 msgid "monograph.publicationFormat.productComposition"
-msgstr "Product Composition"
+msgstr "Composició del producte"
 
 msgid "monograph.publicationFormat.productFormDetailCode"
-msgstr "Product Detail (not required)"
+msgstr "Detall del producte (opcional)"
 
 msgid "monograph.publicationFormat.productIdentifierType"
-msgstr "Product Identification"
+msgstr "Identificació del producte"
 
 msgid "monograph.publicationFormat.price"
-msgstr "Price"
+msgstr "Preu"
 
 msgid "monograph.publicationFormat.priceRequired"
-msgstr "A price is required."
+msgstr "S'ha de posar un preu."
 
 msgid "monograph.publicationFormat.priceType"
-msgstr "Price Type"
+msgstr "Tipus de preu"
 
 msgid "monograph.publicationFormat.discountAmount"
-msgstr "Discount percentage, if applicable"
+msgstr "Percentatge de descompte, si és aplicable"
 
 msgid "monograph.publicationFormat.productAvailability"
-msgstr "Product Availability"
+msgstr "Disponibilitat del producte"
 
 msgid "monograph.publicationFormat.returnInformation"
-msgstr "Returnable Indicator"
+msgstr "Indicador de devolucions"
 
 msgid "monograph.publicationFormat.digitalInformation"
-msgstr "Digital Information"
+msgstr "Informació digital"
 
 msgid "monograph.publicationFormat.productDimensions"
-msgstr "Physical Dimensions"
+msgstr "Dimensions físiques"
 
 msgid "monograph.publicationFormat.productDimensionsSeparator"
 msgstr " x "
 
 msgid "monograph.publicationFormat.productFileSize"
-msgstr "File Size in Mbytes"
+msgstr "Mida de l'arxiu en Mbytes"
 
 msgid "monograph.publicationFormat.productFileSize.override"
-msgstr "Enter your own file size value?"
+msgstr "Introduir un valor personalitzat per a la mida de l'arxiu?"
 
 msgid "monograph.publicationFormat.productHeight"
-msgstr "Height"
+msgstr "Alçària"
 
 msgid "monograph.publicationFormat.productThickness"
-msgstr "Thickness"
+msgstr "Gruix"
 
 msgid "monograph.publicationFormat.productWeight"
-msgstr "Weight"
+msgstr "Pes"
 
 msgid "monograph.publicationFormat.productWidth"
-msgstr "Width"
+msgstr "Amplada"
 
 msgid "monograph.publicationFormat.countryOfManufacture"
-msgstr "Country of Manufacture"
+msgstr "País de fabricació"
 
 msgid "monograph.publicationFormat.technicalProtection"
 msgstr "Protecció tècnica digital"
@@ -318,7 +321,7 @@ msgid "spotlight.spotlights"
 msgstr "Punts destacats"
 
 msgid "spotlight.noneExist"
-msgstr "No hi ha punts destacats"
+msgstr "Actualment no hi ha punts destacats."
 
 msgid "spotlight.title.homePage"
 msgstr "El centre d'atenció"
@@ -549,7 +552,7 @@ msgid "catalog.featuredBooks"
 msgstr "Llibres destacats"
 
 msgid "catalog.dateAdded"
-msgstr "S'ha afegit a {$dateAdded} "
+msgstr "Afegit"
 
 msgid "catalog.publicationInfo"
 msgstr "Informació de publicació"
@@ -645,7 +648,7 @@ msgid "context.context"
 msgstr "Publicació"
 
 msgid "context.select"
-msgstr "Seleccioneu una publicació..."
+msgstr "Canviar a una altra editorial:"
 
 msgid "user.noRoles.selectUsersWithoutRoles"
 msgstr "Inclou usuaris/àries sense rols en aquesta publicació."
@@ -696,7 +699,7 @@ msgid "user.register.completeForm"
 msgstr "Empleneu aquest formulari per registrar-vos en aquesta publicació."
 
 msgid "user.register.selectContext"
-msgstr "Seleccioneu una publicació per registrar-vos-hi"
+msgstr "Seleccioneu una editorial per registrar-vos-hi:"
 
 msgid "user.register.noContexts"
 msgstr "Aquest lloc web no conté cap publicació en la qual us pugueu registrar."
@@ -933,7 +936,9 @@ msgid "log.editor.editorAssigned"
 msgstr "{$editorName} s'ha assignat a com a editor/a de la tramesa {$submissionId}."
 
 msgid "log.proofread.assign"
-msgstr " {$assignerName} ha assignat a {$proofreaderName} com a corrector/a de proves de la tramesa {$submissionId}."
+msgstr ""
+"{$assignerName} ha assignat a {$proofreaderName} com a corrector/a de proves "
+"de la tramesa {$submissionId}."
 
 msgid "log.proofread.complete"
 msgstr "{$proofreaderName} ha tramès {$submissionId} per a la planificació."
@@ -1077,10 +1082,10 @@ msgid "user.authorization.monographFile"
 msgstr "Accés denegat. Se us ha restringit l'accés a aquest fitxer monogràfic específic."
 
 msgid "user.authorization.invalidMonograph"
-msgstr "La monografia no és vàlida o no s'ha sol·licitat cap monografia."
+msgstr "La monografia no és vàlida o no s'ha sol·licitat cap monografia!"
 
 msgid "user.authorization.noContext"
-msgstr "Cap publicació en context."
+msgstr "Cap editorial dins del context!"
 
 msgid "user.authorization.seriesAssignment"
 msgstr "Esteu intentant accedir a una monografia que no forma part de la vostra col·lecció."
@@ -1156,3 +1161,322 @@ msgstr "Descarrega aquest fitxer PDF"
 
 msgid "submission.round"
 msgstr "Ronda&nbsp;{$round}"
+
+msgid "catalog.manage.isNotFeatured"
+msgstr "Aquesta monografia no està destacada. Fer que estigui destacada."
+
+msgid "catalog.manage.isFeatured"
+msgstr "Aquesta monografia s'ha destacat. Fer-la no destacada."
+
+msgid "catalog.manage.filter.searchByAuthorOrTitle"
+msgstr "Cercar per títol o autor/a"
+
+msgid "catalog.manage.nonOrderable"
+msgstr "Aquest monografia no es podrà sol·licitar fins que es publiqui."
+
+msgid "catalog.manage.feature.seriesNewRelease"
+msgstr "Nova publicació en series"
+
+msgid "catalog.manage.feature.categoryNewRelease"
+msgstr "Nova publicació en categoria"
+
+msgid "catalog.manage.feature.newRelease"
+msgstr "Nova publicació"
+
+msgid "catalog.manage.notNewReleaseSuccess"
+msgstr "Monografia desmarcada com a nou llançament."
+
+msgid "catalog.manage.newReleaseSuccess"
+msgstr "Monografia marcada com a nou llançament."
+
+msgid "catalog.manage.notFeaturedSuccess"
+msgstr "Monografia no destacada."
+
+msgid "catalog.manage.featuredSuccess"
+msgstr "Monografia destacada."
+
+msgid "catalog.manage.seriesFeatured"
+msgstr "Destacat en sèries"
+
+msgid "catalog.manage.categoryFeatured"
+msgstr "Destacat en categoria"
+
+msgid "catalog.manage.featured"
+msgstr "Destacat"
+
+msgid "catalog.manage.series.printIssn"
+msgstr "ISSN imprès"
+
+msgid "catalog.manage.series.onlineIssn"
+msgstr "ISSN en línia"
+
+msgid "catalog.manage.series.issn.equalValidation"
+msgstr "L'ISSN en línia i el de la versió impresa no poden ser iguals."
+
+msgid "catalog.manage.series.issn.validation"
+msgstr "Introduïu un ISSN vàlid."
+
+msgid "catalog.manage.series.issn"
+msgstr "ISSN"
+
+msgid "grid.action.availableRepresentation"
+msgstr "Accepta/rebutja aquest format"
+
+msgid "spotlight"
+msgstr "Destacat"
+
+msgid "grid.catalogEntry.availableRepresentation.notApproved"
+msgstr "Esperant acceptació"
+
+msgid "grid.catalogEntry.availableRepresentation.approved"
+msgstr "Acceptat"
+
+msgid "grid.catalogEntry.availableRepresentation.proofNotApproved"
+msgstr "Prova no acceptada."
+
+msgid "grid.catalogEntry.availableRepresentation.notApprovedWarning"
+msgstr "Format no disponible en l'entrada del catàleg."
+
+msgid "grid.catalogEntry.availableRepresentation.catalogNotApprovedWarning"
+msgstr "Entrada de catàleg no acceptada."
+
+msgid "grid.catalogEntry.availableRepresentation.removeMessage"
+msgstr ""
+"<p>Aquest format <em>no estarà disponible per als lectors/ores</em>. Tots "
+"els arxius descarregables i les altres distribucions ja no apareixeran més  "
+"a l'entrada del catàleg de llibres.</p>"
+
+msgid "grid.catalogEntry.availableRepresentation.message"
+msgstr ""
+"<p>Fer que aquest format estigui <em>disponible per als lectors/ores</em>. "
+"Els arxius descarregables i qualsevol altra distribució apareixeran a "
+"l'entrada del catàleg de llibres.</p>"
+
+msgid "grid.catalogEntry.availableRepresentation.title"
+msgstr "Disponibilitat del format"
+
+msgid "grid.catalogEntry.approvedRepresentation.removeMessage"
+msgstr ""
+"<p>Indicar que les metadades per a aquest format no han estat aprovades.</p>"
+
+msgid "grid.catalogEntry.approvedRepresentation.message"
+msgstr ""
+"<p>Aprovar les metadades per a aquest format. Les metadades poden comprovar-"
+"se des del tauler d'edició per a cada format.</p>"
+
+msgid "grid.catalogEntry.approvedRepresentation.title"
+msgstr "Acceptació de format"
+
+msgid "grid.catalogEntry.isNotAvailable"
+msgstr "No disponible"
+
+msgid "grid.catalogEntry.availability"
+msgstr "Disponibilitat"
+
+msgid "grid.catalogEntry.remoteURL"
+msgstr "URL de contingut allotjat remotament"
+
+msgid "grid.catalogEntry.remotelyHostedContent"
+msgstr "Aquest format estarà disponible en un lloc web independent"
+
+msgid "monograph.miscellaneousDetails"
+msgstr "Detalls d'aquesta monografia"
+
+msgid "monograph.publicationFormatDetails"
+msgstr "Detalls sobre el format de publicació disponible: {$format}"
+
+msgid "monograph.publicationFormat"
+msgstr "Format"
+
+msgid "monograph.audience.success"
+msgstr "S'han actualitzat els detalls d'audiència."
+
+msgid "catalog.category.subcategories"
+msgstr "Subcategories"
+
+msgid "catalog.categories"
+msgstr "Categories"
+
+msgid "catalog.coverImageTitle"
+msgstr "Imatge de coberta"
+
+msgid "user.authorization.invalidPublishedSubmission"
+msgstr "S'ha especificat una tramesa publicada invàlida."
+
+msgid "user.profile.form.hideOtherContexts"
+msgstr "Amagar les altres editorials"
+
+msgid "user.profile.form.showOtherContexts"
+msgstr "Registrar amb altres editorials"
+
+msgid "payment.directSales.numericOnly"
+msgstr "Els preus només poden ser numèrics. No incloeu símbols de moneda."
+
+msgid "notification.type.visitCatalog"
+msgstr ""
+"S'ha acceptat la monografia. Visiteu el catàleg per gestionar-ne els detalls "
+"a través de l'enllaç al catàleg que apareix just a sobre."
+
+msgid "notification.type.formatNeedsApprovedSubmission"
+msgstr ""
+"La monografia no es llistarà en el catàleg fins que no es publiqui. Per "
+"afegir aquest llibre al catàleg feu clic a la pestanya \"Publicació\"."
+
+msgid "notification.type.public"
+msgstr "Avisos públics"
+
+msgid "log.editor.recommendation"
+msgstr ""
+"{$editorName} ha enregistrat una recomanació editorial ({$decision}) per a "
+"la monografia {$submissionId}."
+
+msgid "about.onlineSubmissions.viewSubmissions"
+msgstr "veure les trameses pendents"
+
+msgid "about.onlineSubmissions.newSubmission"
+msgstr "Fer una tramesa nova"
+
+msgid "about.onlineSubmissions.submissionActions"
+msgstr "{$newSubmission} o {$viewSubmissions}."
+
+msgid "about.onlineSubmissions.register"
+msgstr "Registrar"
+
+msgid "about.aboutContext"
+msgstr "Quant a l'editorial"
+
+msgid "user.role.subEditors"
+msgstr "Editor/a de la sèrie"
+
+msgid "user.role.subEditor"
+msgstr "Editor/a de la sèrie"
+
+msgid "user.register.noContextReviewerInterests"
+msgstr ""
+"Si vau sol·licitar ser revisor d'alguna editorial heu de introduir els "
+"vostres temes d'interès."
+
+msgid "user.register.otherContextRoles"
+msgstr "Sol·licitar els següents rols."
+
+msgid "user.register.contextsPrompt"
+msgstr "En quines editorials d'aquest lloc us agradaria registrar-vos?"
+
+msgid "user.reviewerPrompt.optin"
+msgstr ""
+"Sí, m'agradaria que em contactessin per revisar trameses d'aquesta editorial."
+
+msgid "user.reviewerPrompt.userGroup"
+msgstr "Sí, sol·licitar el rol de {$userGroup}."
+
+msgid "user.reviewerPrompt"
+msgstr "Estaríeu disposat a revisar trameses d'aquesta editorial?"
+
+msgid "context.current"
+msgstr "Editorial actual:"
+
+msgid "navigation.navigationMenus.newRelease.description"
+msgstr "Enllaçar amb les novetats."
+
+msgid "navigation.navigationMenus.newRelease"
+msgstr "Novetats"
+
+msgid "navigation.navigationMenus.category.description"
+msgstr "Enllaçar amb una categoria."
+
+msgid "navigation.navigationMenus.category.generic"
+msgstr "Categoria"
+
+msgid "navigation.navigationMenus.series.description"
+msgstr "Enllaçar amb una sèrie."
+
+msgid "navigation.navigationMenus.series.generic"
+msgstr "Sèries"
+
+msgid "navigation.skip.spotlights"
+msgstr "Passar a destacats"
+
+msgid "navigation.navigationMenus.catalog.description"
+msgstr "Enllaçar amb el vostre catàleg."
+
+msgid "navigation.catalog.allMonographs"
+msgstr "Totes les monografies"
+
+msgid "common.publications"
+msgstr "Monografies"
+
+msgid "common.publication"
+msgstr "Monografia"
+
+msgid "submission.search"
+msgstr "Cerca de llibres"
+
+msgid "catalog.viewableFile.return"
+msgstr "Tornar per veure els detalls de {$monographTitle}"
+
+msgid "catalog.viewableFile.title"
+msgstr "{$type} visualització de l'arxiu {$title}"
+
+msgid "catalog.sortBy.seriesPositionDesc"
+msgstr "Posició de les sèries (més altes primer)"
+
+msgid "catalog.sortBy.seriesPositionAsc"
+msgstr "Posició de les sèries (més baixes primer)"
+
+msgid "catalog.sortBy.catalogDescription"
+msgstr "Escolliu la manera d'ordenar els llibres d'aquest catàleg."
+
+msgid "catalog.sortBy.categoryDescription"
+msgstr "Escolliu la manera d'ordenar els llibres d'aquesta categoria."
+
+msgid "catalog.sortBy.seriesDescription"
+msgstr "Escolliu la manera d'ordenar els llibres d'aquesta sèrie."
+
+msgid "catalog.sortBy"
+msgstr "Ordre de les monografies"
+
+msgid "catalog.parentCategory"
+msgstr "Categoria matriu"
+
+msgid "catalog.forthcoming"
+msgstr "Pròximament"
+
+msgid "catalog.published"
+msgstr "Publicat"
+
+msgid "catalog.newReleases"
+msgstr "Novetats"
+
+msgid "catalog.category.heading"
+msgstr "Tots els llibres"
+
+msgid "catalog.foundTitlesSearch"
+msgstr ""
+"S'han trobat {$number} títols que coincideixen amb la cerca \"{$searchQuery}"
+"\"."
+
+msgid "catalog.foundTitleSearch"
+msgstr "S'ha trobat un títol que coincideix amb la cerca \"{$searchQuery}\"."
+
+msgid "catalog.featured"
+msgstr "Destacat"
+
+msgid "catalog.noTitlesSearch"
+msgstr ""
+"No s'ha trobat cap títol que coincideixi amb la cerca \"{$searchQuery}\"."
+
+msgid "catalog.noTitlesNew"
+msgstr "No hi ha cap novetat en aquest moment."
+
+msgid "catalog.noTitles"
+msgstr "Encara no s'ha publicat cap títol."
+
+msgid "catalog.manage.isNotNewRelease"
+msgstr ""
+"Aquesta monografia no és una novetat. Fer que la monografia sigui una "
+"novetat."
+
+msgid "catalog.manage.isNewRelease"
+msgstr ""
+"Aquesta monografia és una novetat. Fer que la monografia no sigui una "
+"novetat."
