--- a/locale/es_ES/locale.po
+++ b/locale/es_ES/locale.po
@@ -3,10 +3,10 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-09-30T06:23:44-07:00\n"
-"PO-Revision-Date: 2020-02-28 23:00+0000\n"
+"PO-Revision-Date: 2020-05-23 14:39+0000\n"
 "Last-Translator: Jordi LC <jordi.lacruz@uab.cat>\n"
-"Language-Team: Spanish <http://translate.pkp.sfu.ca/projects/omp/locale/es/>"
-"\n"
+"Language-Team: Spanish <http://translate.pkp.sfu.ca/projects/omp/locale/"
+"es_ES/>\n"
 "Language: es_ES\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -66,10 +66,10 @@ msgid "monograph.publicationFormat.pageCounts"
 msgstr "Número de páginas"
 
 msgid "monograph.publicationFormat.frontMatterCount"
-msgstr "Páginas Preliminares"
+msgstr "Prólogo"
 
 msgid "monograph.publicationFormat.backMatterCount"
-msgstr "Apéndices"
+msgstr "Epílogo"
 
 msgid "monograph.publicationFormat.productComposition"
 msgstr "Composición del producto"
@@ -585,7 +585,7 @@ msgid "catalog.featuredBooks"
 msgstr "Libros destacados"
 
 msgid "catalog.dateAdded"
-msgstr "Añadido {$dateAdded}"
+msgstr "Añadido"
 
 msgid "catalog.publicationInfo"
 msgstr "Información de publicación"
@@ -636,7 +636,7 @@ msgid "common.prefixAndTitle.tip"
 msgstr "Si el título del libro comienza con \"Un/a\" o \"El/La/Los/Las\" (o algo similar que no deba incluirse por orden alfabético) añade la palabra como prefijo."
 
 msgid "common.software"
-msgstr "Abrir Publicación de la Monografía"
+msgstr "Open Monograph Press"
 
 msgid "common.omp"
 msgstr "OMP"
@@ -696,7 +696,7 @@ msgid "context.context"
 msgstr "Editorial"
 
 msgid "context.select"
-msgstr "Cambiar a otra publicación:"
+msgstr "Cambiar a otra editorial:"
 
 msgid "user.noRoles.selectUsersWithoutRoles"
 msgstr "Incluir usuarios/as sin roles en la publicación."
@@ -725,40 +725,40 @@ msgid "user.role.seriesEditor"
 msgstr "Editor/a de la colección"
 
 msgid "user.role.copyeditor"
-msgstr "Corrector de estilo"
+msgstr "Corrector/a de originales"
 
 msgid "user.role.proofreader"
-msgstr "Corrector de pruebas"
+msgstr "Corrector/a de pruebas"
 
 msgid "user.role.productionEditor"
-msgstr "Editor de producción"
+msgstr "Editor/a de producción"
 
 msgid "user.role.managers"
-msgstr "Gestores editoriales"
+msgstr "Gestores/as editoriales"
 
 msgid "user.role.seriesEditors"
 msgstr "Editores de la colección"
 
 msgid "user.role.editors"
-msgstr "Editores"
+msgstr "Editores/as"
 
 msgid "user.role.copyeditors"
-msgstr "Correctores de estilo"
+msgstr "Correctores/as de originales"
 
 msgid "user.role.proofreaders"
-msgstr "Correctores de pruebas"
+msgstr "Correctores/as de pruebas"
 
 msgid "user.role.productionEditors"
-msgstr "Editores de producción"
+msgstr "Editores/as de producción"
 
 msgid "user.register.completeForm"
 msgstr "Complete el formulario para registrarse en la publicación."
 
 msgid "user.register.selectContext"
-msgstr "Seleccione una publicación en la que registrarse:"
+msgstr "Seleccione una editorial en la que registrarse:"
 
 msgid "user.register.noContexts"
-msgstr "No hay publicaciones con las que registrarse en el sitio."
+msgstr "No hay editoriales en las que registrarse en este sitio."
 
 msgid "user.register.privacyStatement"
 msgstr "Declaración de privacidad"
@@ -1160,7 +1160,7 @@ msgid "user.authorization.invalidSeriesEditorSubmission"
 msgstr "¡No se ha solicitado propuesta de editor de colección o esta no es válida!"
 
 msgid "user.authorization.noContext"
-msgstr "¡Publicación fuera de contexto!"
+msgstr "¡Ninguna editorial dentro del contexto!"
 
 msgid "user.authorization.seriesAssignment"
 msgstr "Estás intentando acceder a una monografía que no es parte de tu serie."
@@ -1238,10 +1238,10 @@ msgid "monograph.publicationFormat"
 msgstr "Formato"
 
 msgid "monograph.publicationFormatDetails"
-msgstr "Detalles sobre los formatos de publicación disponibles: {$format}"
+msgstr "Detalles sobre el formato de publicación disponible: {$format}"
 
 msgid "monograph.miscellaneousDetails"
-msgstr "Detalles sobre este monográfico"
+msgstr "Detalles sobre esta monografía"
 
 msgid "monograph.publicationFormat.productDimensionsSeparator"
 msgstr " x "
@@ -1263,22 +1263,28 @@ msgstr "Aceptación de formato"
 
 msgid "grid.catalogEntry.approvedRepresentation.removeMessage"
 msgstr ""
-"<p>Indicar que los metadatos para este formato no han sido aceptados.</p>"
+"<p>Indicar que los metadatos para este formato no han sido aprobados.</p>"
 
 msgid "grid.catalogEntry.availableRepresentation.title"
 msgstr "Disponibilidad de formato"
 
 msgid "grid.catalogEntry.availableRepresentation.message"
-msgstr "<p>Haz que este formato <em>esté disponible para los lectores/as</em>. Los ficheros descargables y cualquier otra distribución aparecerán en el registro de entrada de libros.</p>"
+msgstr ""
+"<p>Haz que este formato esté <em>disponible para los lectores/as</em>. Los "
+"archivos descargables y cualquier otra distribución aparecerán en la entrada "
+"del catálogo de libros.</p>"
 
 msgid "grid.catalogEntry.availableRepresentation.removeMessage"
-msgstr "<p>Este formato <em>no estará disponible para los lectores/as</em>. Los ficheros descargables o cualquier otra distribución ya no aparecerán en el registro de entrada de libros.</p>"
+msgstr ""
+"<p>Este formato <em>no estará disponible para los lectores/as</em>. Todos "
+"los archivos descargables o las otras distribuciones ya no aparecerán en la "
+"entrada del catálogo de libros.</p>"
 
 msgid "grid.catalogEntry.availableRepresentation.catalogNotApprovedWarning"
-msgstr "Registro de entrada no aceptado."
+msgstr "Entrada de catálogo no aceptada."
 
 msgid "grid.catalogEntry.availableRepresentation.notApprovedWarning"
-msgstr "Formato no disponible en el registro de entrada."
+msgstr "Formato no disponible en la entrada del catálogo."
 
 msgid "grid.catalogEntry.availableRepresentation.proofNotApproved"
 msgstr "Prueba no aceptada."
@@ -1299,7 +1305,7 @@ msgid "catalog.manage.series.issn"
 msgstr "ISSN"
 
 msgid "catalog.manage.series.issn.validation"
-msgstr "Por favor, introduzca un ISSN válido."
+msgstr "Introduzca un ISSN válido."
 
 msgid "catalog.manage.series.issn.equalValidation"
 msgstr "El ISSN en línea y el de la versión impresa no pueden ser iguales."
@@ -1389,10 +1395,10 @@ msgid "user.profile.form.hideOtherContexts"
 msgstr "Oculta otras editoriales"
 
 msgid "user.role.subEditor"
-msgstr "Editor de la colección"
+msgstr "Editor/a de la sèrie"
 
 msgid "user.role.subEditors"
-msgstr "Editor de la colección"
+msgstr "Editor/a de la serie"
 
 msgid "about.aboutContext"
 msgstr "Sobre la editorial"
@@ -1407,22 +1413,24 @@ msgid "about.onlineSubmissions.viewSubmissions"
 msgstr "Ver sus envíos pendientes"
 
 msgid "log.editor.recommendation"
-msgstr "{$editorName} registró una recomendación del editorial  ({$decision}) para la monografía {$submissionId} ."
+msgstr ""
+"{$editorName} registró una recomendación editorial ({$decision}) para la "
+"monografía {$submissionId}."
 
 msgid "notification.type.public"
 msgstr "Anuncios públicos"
 
 msgid "catalog.manage.notNewReleaseSuccess"
-msgstr "La monografía no está marcada como nueva publicación."
+msgstr "Monografía desmarcada como nueva publicación."
 
 msgid "catalog.manage.feature.newRelease"
 msgstr "Nueva publicación"
 
 msgid "catalog.manage.feature.categoryNewRelease"
-msgstr "Nueva publicación en cateogría"
+msgstr "Nueva publicación en categoría"
 
 msgid "catalog.manage.feature.seriesNewRelease"
-msgstr "Nueva publicación en serie"
+msgstr "Nueva publicación en series"
 
 msgid "catalog.manage.nonOrderable"
 msgstr "Esta monografía no se puede solicitar hasta que se publique."
@@ -1431,7 +1439,7 @@ msgid "catalog.manage.filter.searchByAuthorOrTitle"
 msgstr "Buscar por título o autor"
 
 msgid "catalog.forthcoming"
-msgstr "Próximo"
+msgstr "Próximamente"
 
 msgid "navigation.catalog.allMonographs"
 msgstr "Todas las monografías"
@@ -1449,13 +1457,15 @@ msgid "user.reviewerPrompt.optin"
 msgstr "Sí, me gustaría que me contacten para revisar los envíos de esta editorial."
 
 msgid "user.register.contextsPrompt"
-msgstr "¿En qué Editoriales querría registrarse?"
+msgstr "¿En qué editoriales de este sitio le gustaría registrarse?"
 
 msgid "user.register.otherContextRoles"
 msgstr "Solicita los siguientes roles."
 
 msgid "user.register.noContextReviewerInterests"
-msgstr "Si solicitó ser revisor de cualquier editorial, ingrese sus intereses."
+msgstr ""
+"Si solicitó ser revisor de alguna editorial debe introcir sus temas de "
+"interés."
 
 msgid "catalog.manage.featured"
 msgstr "Destacado"
@@ -1467,13 +1477,13 @@ msgid "catalog.manage.seriesFeatured"
 msgstr "Destacado en series"
 
 msgid "catalog.manage.featuredSuccess"
-msgstr "La monografía está destacada."
+msgstr "Monografía destacada."
 
 msgid "catalog.manage.notFeaturedSuccess"
 msgstr "Monografía no destacada."
 
 msgid "catalog.manage.newReleaseSuccess"
-msgstr "La monografía está marcada como un nuevo lanzamiento."
+msgstr "Monografía marcada como nuevo lanzamiento."
 
 msgid "grid.series.urlWillBe"
 msgstr "La URL de la colección es {$sampleUrl}. La ruta es una cadena de caracteres que sirven para identificar una serie."
