--- a/locale/pl_PL/admin.po
+++ b/locale/pl_PL/admin.po
@@ -4,7 +4,7 @@ msgstr ""
 "Last-Translator: rl <biuro@fimagis.pl>\n"
 "Language-Team: Polish <http://translate.pkp.sfu.ca/projects/omp/admin/pl_PL/>"
 "\n"
-"Language: pl\n"
+"Language: pl_PL\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
