--- a/locale/pt_BR/default.po
+++ b/locale/pt_BR/default.po
@@ -2,14 +2,17 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"Last-Translator: \n"
-"Language-Team: \n"
+"POT-Creation-Date: 2019-09-30T12:00:53-07:00\n"
+"PO-Revision-Date: 2020-06-06 02:27+0000\n"
+"Last-Translator: Diego José Macêdo <diegojmacedo@gmail.com>\n"
+"Language-Team: Portuguese (Brazil) <http://translate.pkp.sfu.ca/projects/omp/"
+"default/pt_BR/>\n"
+"Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"POT-Creation-Date: 2019-09-30T12:00:53-07:00\n"
-"PO-Revision-Date: 2019-09-30T12:00:53-07:00\n"
-"Language: \n"
+"Plural-Forms: nplurals=2; plural=n > 1;\n"
+"X-Generator: Weblate 3.9.1\n"
 
 msgid "default.genres.appendix"
 msgstr "Apêndice"
@@ -69,7 +72,7 @@ msgid "default.groups.name.editor"
 msgstr "Editor geral"
 
 msgid "default.groups.plural.editor"
-msgstr "Editores gerais "
+msgstr "Editores gerais"
 
 msgid "default.groups.abbrev.editor"
 msgstr "EdGer"
@@ -129,10 +132,10 @@ msgid "default.groups.abbrev.internalReviewer"
 msgstr "RevInt"
 
 msgid "default.groups.name.externalReviewer"
-msgstr "Revisor externo"
+msgstr "Avaliador Externo"
 
 msgid "default.groups.plural.externalReviewer"
-msgstr "Revisor externo"
+msgstr "Avaliadores Externo"
 
 msgid "default.groups.abbrev.externalReviewer"
 msgstr "RevExt"
@@ -216,7 +219,7 @@ msgid "default.contextSettings.checklist.fileFormat"
 msgstr "O arquivo de submissão está no formato Microsoft Word, RTF, ou OpenDocument."
 
 msgid "default.contextSettings.checklist.addressesLinked"
-msgstr "URLs para as referências form informadas, quando disponíveis."
+msgstr "URLs para as referências foram informadas, quando disponíveis."
 
 msgid "default.contextSettings.checklist.submissionAppearance"
 msgstr "O texto está formatado com linha simples; usa fonte tamanho 12 pontos, adota itálico em vez de sublinhado (exceto para URLs); todas as ilustrações, figuras e tabelas estão incluídas no texto em locais específicos, em vez de estarem no final.."
@@ -240,7 +243,16 @@ msgid "default.contextSettings.forReaders"
 msgstr "Estimulamos os leitores a se cadastrarem no site para receber notificações da editora. Acesse a página <a href=\"{$indexUrl}/{$contextPath}/user/register\">Cadastro</a> no topo da págin. O cadastro permitirá ao leitor receber em seu e-mail o Sumário de cada monografia publicada. A lista também permite à editora afirmar o apoio de seus seguidores ou de leitura de suas publicações. Acesse a página sobre a <a href=\"{$indexUrl}/{$contextPath}/about/submissions#privacyStatement\">Declaração de Privacidade</a>, que assegura aos leitores que seus nomes e endereços de e-mail não serão usados para outros propósitos."
 
 msgid "default.contextSettings.forAuthors"
-msgstr "Interessado em publicar nesta editora? Recomendamos que leia atentamente a página <a href=\"{$indexUrl}/{$contextPath}/about\">Sobre a editora</a>, que contém as políticas de seções, bem como as <a href=\"{$indexUrl}/{$contextPath}/about/submissions#authorGuidelines\">Diretrize para autores</a>. É necessário que os autores façam um <a href=\"{$indexUrl}/{$contextPath}/user/register\">cadastro</a> no sistema antes de realizar a submissão, ou, caso já possuam um, basta fazer o <a href=\"{$indexUrl}/index/login\">acesso</a> e iniciar os 5 passos do processo de submissão."
+msgstr ""
+"Interessado em publicar nesta editora? Recomendamos que leia atentamente a "
+"página <a href=\"{$indexUrl}/{$contextPath}/about\">Sobre a Editora</a>, que "
+"contém as políticas de seções, bem como as <a href=\""
+"{$indexUrl}/{$contextPath}/about/submissions#authorGuidelines\">Diretrize "
+"para autores</a>. É necessário que os autores façam um <a href=\""
+"{$indexUrl}/{$contextPath}/user/register\">cadastro</a> no sistema antes de "
+"realizar a submissão, ou, caso já possuam um, basta fazer o <a href=\""
+"{$indexUrl}/index/login\">acesso</a> e iniciar os 5 passos do processo de "
+"submissão."
 
 msgid "default.contextSettings.forLibrarians"
 msgstr "Estimulamos bibliotecas de pesquisa a listar esta editora como um fonte de conteúdo eletrônico. Este sistema de código aberto também é útil para bibliotecas, universidades e seus membros, para uso em conjunto com as editoras com as quais possuem envolvimento editorial (saiba mais acessando <a href=\"http://pkp.sfu.ca/omp\">Open Monograph Press</a>)."
