--- a/locale/es_ES/manager.po
+++ b/locale/es_ES/manager.po
@@ -3,10 +3,10 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-09-30T06:23:44-07:00\n"
-"PO-Revision-Date: 2020-04-23 16:38+0000\n"
+"PO-Revision-Date: 2020-06-20 09:39+0000\n"
 "Last-Translator: Jordi LC <jordi.lacruz@uab.cat>\n"
-"Language-Team: Spanish <http://translate.pkp.sfu.ca/projects/omp/manager/es/>"
-"\n"
+"Language-Team: Spanish <http://translate.pkp.sfu.ca/projects/omp/manager/"
+"es_ES/>\n"
 "Language: es_ES\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -559,7 +559,7 @@ msgid "manager.setup.enablePublicGalleyId"
 msgstr "Los identificadores personalizados se usarán para identificar galeradas (p.ej. ficheros HTML o PDF) para elementos publicados."
 
 msgid "manager.setup.enableUserRegistration"
-msgstr "Los visitantes pueden crear una cuenta de usuario/a en la publicación."
+msgstr "Los visitantes pueden crear una cuenta de usuario/a en la editorial."
 
 msgid "manager.setup.enableUserRegistration.author"
 msgstr "Autores (pueden presentar material a la editorial)"
@@ -574,13 +574,15 @@ msgid "manager.setup.featuredBooks"
 msgstr "Libros destacados"
 
 msgid "manager.setup.focusAndScope"
-msgstr "Orientación y ámbito de actividad de la editorial"
+msgstr "Enfoque y alcance de la editorial"
 
 msgid "manager.setup.focusAndScope.description"
-msgstr "Introduce una declaración a continuación. Ésta aparecerá en Acerca de la editorial, que informa a los autores, lectores y bibliotecarios de la variedad de monografías y otros elementos que publicará la editorial."
+msgstr ""
+"Informe a los autores/as, lectores/as y bibliotecarios/as de la temática de "
+"las monografías y de otros elementos que publicará la editorial."
 
 msgid "manager.setup.focusScope"
-msgstr "Orientación y ámbito de actividad"
+msgstr "Enfoque y alcance"
 
 msgid "manager.setup.focusScopeDescription"
 msgstr "<strong>EJEMPLO DE DATOS HTML</strong>"
@@ -652,10 +654,17 @@ msgid "manager.setup.layoutInstructions"
 msgstr "Instrucciones de maquetación"
 
 msgid "manager.setup.layoutInstructionsDescription"
-msgstr "Las instrucciones de maquetación pueden aplicarse al formato de los elementos publicados en la publicación e introducirse a continuación en HTML o texto plano. Estarán disponibles para el maquetador/a y el editor/a de sección en la página de edición de cada envío. (No se proporcionan instrucciones, ya que cada publicación puede utilizar sus propios formatos de archivo, estándares bibliográficos, hojas de estilo, etc.),"
+msgstr ""
+"Puede prepara las instrucciones de maquetación para dar formato a los "
+"elementos que la editorial publica e introducirlos a continuación en HTML o "
+"en texto plano. Estas instrucciones estarán disponibles para el maquetador/a "
+"y para el editor/a de sección en la página de edición de cada envío. (Tenga "
+"en cuenta que no se proporcionan instrucciones predefinidas porque cada "
+"publicación puede utilizar sus propios formatos de archivo, estándares "
+"bibliográficos, hojas de estilo, etc.)"
 
 msgid "manager.setup.layoutTemplates"
-msgstr "Plantillas de diseño"
+msgstr "Plantillas de maquetació"
 
 msgid "manager.setup.layoutTemplatesDescription"
 msgstr "Se pueden subir las plantillas para que aparezcan en Maquetación para cada uno de los formatos estándares publicados en la publicación (p. ej. monografía, reseña de libro, etc.) usando cualquier formato de archivo (p. ej. pdf., doc., etc.) con anotaciones que especifiquen la fuente, el tamaño, los márgenes, etc. que sirvan como guía para los maquetadores/as y los correctores/as de pruebas."
@@ -1403,7 +1412,7 @@ msgstr "Identidad del medio"
 
 msgid "manager.setup.numAnnouncementsHomepage.description"
 msgstr ""
-"Cuántos anuncios mostrar en la página de inicio. Dejelo vacío para no "
+"Número de avisos que mostrar en la página de inicio. Dejelo vacío para no "
 "mostrar ninguno."
 
 msgid "manager.setup.numAnnouncementsHomepage"
@@ -1411,13 +1420,13 @@ msgstr "Mostrar en la página principal"
 
 msgid "manager.setup.enableAnnouncements.description"
 msgstr ""
-"Se pueden publicar anuncios para informar a los lectores sobre noticias y "
-"eventos. Los anuncios publicados aparecerán en la página de Anuncios."
+"Se pueden publicar avisos para informar a los lectores sobre noticias y "
+"eventos. Los avisos publicados aparecerán en la página de avisos."
 
 msgid "manager.setup.emailSignature.description"
 msgstr ""
-"Los correos electrónicos ya listos para ser enviados por el sistema en "
-"nombre del medio, tendrán la siguiente firma agregada al final."
+"Los correos electrónicos predefinidos que envía el sistema en nombre de la "
+"editorial tendrán la siguiente firma al final."
 
 msgid "manager.setup.emailBounceAddress.disabled"
 msgstr ""
@@ -1471,3 +1480,11 @@ msgstr "Identidad de la editorial"
 
 msgid "manager.payment.success"
 msgstr "La configuración de pago ha sido actualizada."
+
+msgid "manager.setup.pressThumbnail.description"
+msgstr ""
+"Un pequeño logotipo o representación de la editorial que pueda utilizarse en "
+"listados de editoriales."
+
+msgid "manager.setup.pressThumbnail"
+msgstr "Miniatura de la editorial"
