--- a/locale/en_US/submission.po
+++ b/locale/en_US/submission.po
@@ -368,6 +368,9 @@ msgstr "The catalog entry details have been updated."
 msgid "publication.invalidSeries"
 msgstr "The series for this publication could not be found."
 
+msgid "publication.inactiveSeries"
+msgstr "{$series} (Inactive)"
+
 msgid "publication.required.issue"
 msgstr "The publication must be assigned to an issue before it can be published."
 
