Add missing translate key

--- a/locale/en_US/locale.po
+++ b/locale/en_US/locale.po
@@ -977,6 +977,9 @@ msgstr "Identify reviewing interests (substantive areas and research methods):"
 msgid "user.register.form.userGroupRequired"
 msgstr "You must select at least one role"
 
+msgid "site.noPresses"
+msgstr "There are no presses available."
+
 msgid "site.pressView"
 msgstr "View Press Website"
 
