--- a/locale/uk_UA/locale.po
+++ b/locale/uk_UA/locale.po
@@ -1015,7 +1015,7 @@ msgstr ""
 "\n"
 "<h4>Оновлення</h4>\n"
 "\n"
-"<p>Якщо ви оновлюєте існуючу інсталяцію системи OMP 0.x, <a href=\""
+"<p>Якщо ви оновлюєте існуючу інсталяцію системи OMP, <a href=\""
 "{$upgradeUrl}\">Натисніть ТУТ</a> щоб продовжити.</p>"
 
 msgid "about.aboutOMPSite"
