pkp/pkp-lib#6057 Refactor submission files
- Add submission file API endpoints
- Add submission file schema for OMP properties
- Add test for different submission file genre
- Use new PKPFileService for submission files
- Update native import/export to new submission file ids
- Update publication format grids to new submission file ids
- Update migration scripts
- Update ChapterAuthorDAO to get locale from submissionm
- Update payment system to new submission file ids
- Update pubId plugins to new submisssion file ids
- Remove unused galley styles in default theme
- Delete submission files when a publication format is deleted
- #6257 Move submission file policies to pkp-lib

--- a/locale/en_US/locale.po
+++ b/locale/en_US/locale.po
@@ -875,6 +875,9 @@ msgstr "Current Press:"
 msgid "context.select"
 msgstr "Switch to another press:"
 
+msgid "user.authorization.representationNotFound"
+msgstr "The requested publication format could not be found."
+
 msgid "user.noRoles.selectUsersWithoutRoles"
 msgstr "Include users with no roles in this press."
 
@@ -1408,9 +1411,6 @@ msgstr "Purchase Monograph or Chapter Download"
 
 msgid "payment.directSales.monograph.description"
 msgstr "This transaction is for the purchase of a direct download of a single monograph or monograph chapter."
-
-msgid "debug.notes.currencyListLoad"
-msgstr "Loaded currency list \"{$filename}\" from XML"
 
 msgid "debug.notes.helpMappingLoad"
 msgstr "Reloaded XML help mapping file {$filename} in search of {$id}."
