--- a/docs/release-notes/README-3.2.1
+++ b/docs/release-notes/README-3.2.1
@@ -1,8 +1,42 @@
-OMP 3.2.1 Release Notes
-Git tag: 3_2_1-0
+OMP 3.2.1-2 Release Notes
+Git tag: 3_2_1-2
 
-Release date: June 26, 2020
-===========================
+Release date: November 13, 2020
+===============================
+
+3.2.1-2 Build
+-------------
+	#4991: Add Category to submission page
+	#5179: Submission landing page should adjust heading levels hierachy
+	#5445: Test licenseUrl context setting
+	#5592: Block plugins and cacheing problem
+	#6029: Report Generator doesn't return any results when custom range is selected with a single day
+	#6056: Version number showing Publication ID for authors
+	#6064: Text color does not respond to background color selection on mobile
+	#6067: Submission Checklist - Reordering doesn't save
+	#6081: Catalog links to the wrong monograph and breaks format
+	#6084: Announcement emails sent blank after upgrade
+	#6105: Allow capital letters in context urlPath
+	#6115: Enable "download all files" in production ready files grid
+	#6120: OMP Internal Review queries are placed in External Review
+	#6134: The statistics notification is sent to roles that have no access to the interface
+	#6146: Allow submission search by ORCID ID
+	#6148: Error for custom blocks in side bar due to automatic name addition
+	#6165: Announcement mailout can fail if any user is unsubscribed from notifications
+	#6168: ANNOUNCEMENT email template not installed on upgrade to 3.2.1
+	#6184: Can't use array values in theme options
+	#6196: Fix test/build for changed Google closure compiler installation process
+	#6213: Error in upgrade from 3.1.x to 3.2.x on submissionSubject (controlled vocabulary) data
+	#6216: Null value in column setting_type during Upgrade::migrateSubmissionCoverImages
+	#6226: CSRF checks missing from import/export plugin upload bounce requests
+	#6246: Let iframe use relative URL instead of absolute
+	#6257: Refactor submission file policies
+	#6262: Broken catalog page in OMP with PostgreSQL
+	#6265: New sample file for Native Import/export
+	#6269: Submission Hyperlink
+	#6300: PHP warning with cancelled reviews
+	#6301: Add indexes for search performance
+
 
 3.2.1-1 Build
 -------------
