Payments sidebar menu translation missing

--- a/locale/en_US/locale.po
+++ b/locale/en_US/locale.po
@@ -14,6 +14,9 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
 "X-Generator: Weblate 3.9.1\n"
 
+msgid "common.payments"
+msgstr "Payments"
+
 msgid "monograph.audience"
 msgstr "Audience"
 
