pkp/pkp-lib#5610 move keys to omp

--- a/locale/pl_PL/submission.po
+++ b/locale/pl_PL/submission.po
@@ -409,3 +409,7 @@ msgstr "{$series} (Nieaktywny)"
 
 msgid "submission.list.viewEntry"
 msgstr "Wgląd"
+
+msgid "submission.queries.production"
+msgstr "Dyskusja w trakcie realizacji"
+
