--- a/locale/en_US/manager.po
+++ b/locale/en_US/manager.po
@@ -1104,3 +1104,15 @@ msgstr "Invalid XML:"
 
 msgid "plugins.importexport.native.exportSubmissions"
 msgstr "Export Submissions"
+
+msgid "plugins.importexport.common.cliError"
+msgstr "ERROR:"
+
+msgid "plugins.importexport.common.error.unknownJournal"
+msgstr "The specified journal path, \"{$journalPath}\", does not exist."
+
+msgid "plugins.importexport.common.error.unknownObjects"
+msgstr "The specified objects could not be found."
+
+msgid "plugins.importexport.native.error.unknownUser"
+msgstr "The specified user, \"{$userName}\", does not exist."
